re-run notebook

--- a/notebook/load_data.ipynb
+++ b/notebook/load_data.ipynb
@@ -53,16 +53,160 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'pandas' has no attribute 'to_csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m load_data()\n",
-      "Cell \u001b[0;32mIn[2], line 25\u001b[0m, in \u001b[0;36mload_data\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mrename(\n\u001b[1;32m     17\u001b[0m     columns\u001b[38;5;241m=\u001b[39m{\n\u001b[1;32m     18\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDate\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdate\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     21\u001b[0m     }\n\u001b[1;32m     22\u001b[0m )\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Export dataframe as csv\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m pd\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../data/raw/data.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'pandas' has no attribute 'to_csv'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>control_point</th>\n",
+       "      <th>travel_type</th>\n",
+       "      <th>passenger_origin</th>\n",
+       "      <th>passenger_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01-01-2021</td>\n",
+       "      <td>Airport</td>\n",
+       "      <td>Arrival</td>\n",
+       "      <td>Hong Kong Residents</td>\n",
+       "      <td>341</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01-01-2021</td>\n",
+       "      <td>Airport</td>\n",
+       "      <td>Departure</td>\n",
+       "      <td>Hong Kong Residents</td>\n",
+       "      <td>803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>01-01-2021</td>\n",
+       "      <td>Express Rail Link West Kowloon</td>\n",
+       "      <td>Arrival</td>\n",
+       "      <td>Hong Kong Residents</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>01-01-2021</td>\n",
+       "      <td>Express Rail Link West Kowloon</td>\n",
+       "      <td>Departure</td>\n",
+       "      <td>Hong Kong Residents</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>01-01-2021</td>\n",
+       "      <td>Hung Hom</td>\n",
+       "      <td>Arrival</td>\n",
+       "      <td>Hong Kong Residents</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136423</th>\n",
+       "      <td>10-02-2025</td>\n",
+       "      <td>Harbour Control</td>\n",
+       "      <td>Departure</td>\n",
+       "      <td>Other Visitors</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136424</th>\n",
+       "      <td>10-02-2025</td>\n",
+       "      <td>Kai Tak Cruise Terminal</td>\n",
+       "      <td>Arrival</td>\n",
+       "      <td>Other Visitors</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136425</th>\n",
+       "      <td>10-02-2025</td>\n",
+       "      <td>Kai Tak Cruise Terminal</td>\n",
+       "      <td>Departure</td>\n",
+       "      <td>Other Visitors</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136426</th>\n",
+       "      <td>10-02-2025</td>\n",
+       "      <td>Macau Ferry Terminal</td>\n",
+       "      <td>Arrival</td>\n",
+       "      <td>Other Visitors</td>\n",
+       "      <td>2456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136427</th>\n",
+       "      <td>10-02-2025</td>\n",
+       "      <td>Macau Ferry Terminal</td>\n",
+       "      <td>Departure</td>\n",
+       "      <td>Other Visitors</td>\n",
+       "      <td>2765</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>136428 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date                   control_point travel_type  \\\n",
+       "0       01-01-2021                         Airport     Arrival   \n",
+       "1       01-01-2021                         Airport   Departure   \n",
+       "2       01-01-2021  Express Rail Link West Kowloon     Arrival   \n",
+       "3       01-01-2021  Express Rail Link West Kowloon   Departure   \n",
+       "4       01-01-2021                        Hung Hom     Arrival   \n",
+       "...            ...                             ...         ...   \n",
+       "136423  10-02-2025                 Harbour Control   Departure   \n",
+       "136424  10-02-2025         Kai Tak Cruise Terminal     Arrival   \n",
+       "136425  10-02-2025         Kai Tak Cruise Terminal   Departure   \n",
+       "136426  10-02-2025            Macau Ferry Terminal     Arrival   \n",
+       "136427  10-02-2025            Macau Ferry Terminal   Departure   \n",
+       "\n",
+       "           passenger_origin  passenger_count  \n",
+       "0       Hong Kong Residents              341  \n",
+       "1       Hong Kong Residents              803  \n",
+       "2       Hong Kong Residents                0  \n",
+       "3       Hong Kong Residents                0  \n",
+       "4       Hong Kong Residents                0  \n",
+       "...                     ...              ...  \n",
+       "136423       Other Visitors               39  \n",
+       "136424       Other Visitors                0  \n",
+       "136425       Other Visitors                0  \n",
+       "136426       Other Visitors             2456  \n",
+       "136427       Other Visitors             2765  \n",
+       "\n",
+       "[136428 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
