added the skeleton of the project

--- a/notebook/eda.ipynb
+++ b/notebook/eda.ipynb
@@ -212,6 +212,16 @@
    "source": [
     "load_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b91e1c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# EDA "
+   ]
   }
  ],
  "metadata": {
