added some eda to understand control point names

--- a/notebook/eda.ipynb
+++ b/notebook/eda.ipynb
@@ -121,87 +121,24 @@
        "      <td>Hong Kong Residents</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136423</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Harbour Control</td>\n",
-       "      <td>Departure</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136424</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Kai Tak Cruise Terminal</td>\n",
-       "      <td>Arrival</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136425</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Kai Tak Cruise Terminal</td>\n",
-       "      <td>Departure</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136426</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Macau Ferry Terminal</td>\n",
-       "      <td>Arrival</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>2456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136427</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Macau Ferry Terminal</td>\n",
-       "      <td>Departure</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>2765</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>136428 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              date                   control_point travel_type  \\\n",
-       "0       01-01-2021                         Airport     Arrival   \n",
-       "1       01-01-2021                         Airport   Departure   \n",
-       "2       01-01-2021  Express Rail Link West Kowloon     Arrival   \n",
-       "3       01-01-2021  Express Rail Link West Kowloon   Departure   \n",
-       "4       01-01-2021                        Hung Hom     Arrival   \n",
-       "...            ...                             ...         ...   \n",
-       "136423  10-02-2025                 Harbour Control   Departure   \n",
-       "136424  10-02-2025         Kai Tak Cruise Terminal     Arrival   \n",
-       "136425  10-02-2025         Kai Tak Cruise Terminal   Departure   \n",
-       "136426  10-02-2025            Macau Ferry Terminal     Arrival   \n",
-       "136427  10-02-2025            Macau Ferry Terminal   Departure   \n",
+       "         date                   control_point travel_type  \\\n",
+       "0  01-01-2021                         Airport     Arrival   \n",
+       "1  01-01-2021                         Airport   Departure   \n",
+       "2  01-01-2021  Express Rail Link West Kowloon     Arrival   \n",
+       "3  01-01-2021  Express Rail Link West Kowloon   Departure   \n",
+       "4  01-01-2021                        Hung Hom     Arrival   \n",
        "\n",
-       "           passenger_origin  passenger_count  \n",
-       "0       Hong Kong Residents              341  \n",
-       "1       Hong Kong Residents              803  \n",
-       "2       Hong Kong Residents                0  \n",
-       "3       Hong Kong Residents                0  \n",
-       "4       Hong Kong Residents                0  \n",
-       "...                     ...              ...  \n",
-       "136423       Other Visitors               39  \n",
-       "136424       Other Visitors                0  \n",
-       "136425       Other Visitors                0  \n",
-       "136426       Other Visitors             2456  \n",
-       "136427       Other Visitors             2765  \n",
-       "\n",
-       "[136428 rows x 5 columns]"
+       "      passenger_origin  passenger_count  \n",
+       "0  Hong Kong Residents              341  \n",
+       "1  Hong Kong Residents              803  \n",
+       "2  Hong Kong Residents                0  \n",
+       "3  Hong Kong Residents                0  \n",
+       "4  Hong Kong Residents                0  "
       ]
      },
      "execution_count": 3,
@@ -210,7 +147,8 @@
     }
    ],
    "source": [
-    "load_data()"
+    "data = load_data()\n",
+    "data.head()"
    ]
   },
   {
@@ -218,15 +156,118 @@
    "execution_count": null,
    "id": "b91e1c8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hong Kong Residents' 'Mainland Visitors' 'Other Visitors']\n"
+     ]
+    }
+   ],
    "source": [
-    "# EDA "
+    "# EDA \n",
+    "\n",
+    "# Get unique dates\n",
+    "origin = data['passenger_origin'].unique()\n",
+    "print(origin)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3ac40e8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.006087"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_passengers = data[\"passenger_count\"].sum()\n",
+    "tourist_df = data[(data['travel_type'] == 'Arrival') & (data['passenger_origin'] != 'Hong Kong Residents')]\n",
+    "volume_entries = round(len(tourist_df) / 7.54e6, 8)\n",
+    "volume_entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8d762f06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.tail of 0         01-01-2021\n",
+       "1         01-01-2021\n",
+       "2         01-01-2021\n",
+       "3         01-01-2021\n",
+       "4         01-01-2021\n",
+       "             ...    \n",
+       "137683    25-02-2025\n",
+       "137684    25-02-2025\n",
+       "137685    25-02-2025\n",
+       "137686    25-02-2025\n",
+       "137687    25-02-2025\n",
+       "Name: date, Length: 137688, dtype: object>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_dates = data['date']\n",
+    "unique_dates.tail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ff809270",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Airport', 'Express Rail Link West Kowloon', 'Hung Hom', 'Lo Wu',\n",
+       "       'Lok Ma Chau Spur Line', 'Heung Yuen Wai',\n",
+       "       'Hong Kong-Zhuhai-Macao Bridge', 'Lok Ma Chau', 'Man Kam To',\n",
+       "       'Sha Tau Kok', 'Shenzhen Bay', 'China Ferry Terminal',\n",
+       "       'Harbour Control', 'Kai Tak Cruise Terminal',\n",
+       "       'Macau Ferry Terminal', 'Tuen Mun Ferry Terminal'], dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['control_point'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e088d804",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "532",
    "language": "python",
    "name": "python3"
   },
@@ -240,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
