--- a/notebook/eda.ipynb
+++ b/notebook/eda.ipynb
@@ -12,43 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "5259b1f8-82e5-46ac-908c-1361bf948d49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data():\n",
-    "    \"\"\"\n",
-    "    Loads and cleans daily passenger traffic data into a DataFrame.\n",
-    "    Data Source: \n",
-    "    https://data.gov.hk/en-data/dataset/hk-immd-set5-statistics-daily-passenger-traffic\n",
-    "    \"\"\"\n",
-    "    data_source_link = \"https://www.immd.gov.hk/opendata/eng/transport/immigration_clearance/statistics_on_daily_passenger_traffic.csv\"\n",
-    "    df = pd.read_csv(data_source_link)\n",
-    "    df = df.iloc[:, :6]\n",
-    "    df = df.melt(\n",
-    "        id_vars=df.columns[:3],\n",
-    "        var_name=\"passenger_origin\",\n",
-    "        value_name=\"passenger_count\",\n",
-    "    )\n",
-    "    # Rename columns\n",
-    "    df = df.rename(\n",
-    "        columns={\n",
-    "            \"Date\": \"date\",\n",
-    "            \"Control Point\": \"control_point\",\n",
-    "            \"Arrival / Departure\": \"travel_type\",\n",
-    "        }\n",
-    "    )\n",
-    "    \n",
-    "    # Export dataframe as csv\n",
-    "    df.to_csv('../data/raw/data.csv')\n",
-    "    \n",
-    "    return df"
+    "data = pd.read_csv('../data/processed/data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "8b9df7cc-adb8-4aa5-a83c-664c607e3161",
    "metadata": {},
    "outputs": [
@@ -73,87 +47,98 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>date</th>\n",
        "      <th>control_point</th>\n",
        "      <th>travel_type</th>\n",
        "      <th>passenger_origin</th>\n",
        "      <th>passenger_count</th>\n",
+       "      <th>travel_method</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Airport</td>\n",
        "      <td>Arrival</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>341</td>\n",
+       "      <td>by air</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Airport</td>\n",
        "      <td>Departure</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>803</td>\n",
+       "      <td>by air</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Express Rail Link West Kowloon</td>\n",
        "      <td>Arrival</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>0</td>\n",
+       "      <td>by land</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Express Rail Link West Kowloon</td>\n",
        "      <td>Departure</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>0</td>\n",
+       "      <td>by land</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Hung Hom</td>\n",
        "      <td>Arrival</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>0</td>\n",
+       "      <td>by land</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date                   control_point travel_type  \\\n",
-       "0  01-01-2021                         Airport     Arrival   \n",
-       "1  01-01-2021                         Airport   Departure   \n",
-       "2  01-01-2021  Express Rail Link West Kowloon     Arrival   \n",
-       "3  01-01-2021  Express Rail Link West Kowloon   Departure   \n",
-       "4  01-01-2021                        Hung Hom     Arrival   \n",
+       "   Unnamed: 0        date                   control_point travel_type  \\\n",
+       "0           0  01-01-2021                         Airport     Arrival   \n",
+       "1           1  01-01-2021                         Airport   Departure   \n",
+       "2           2  01-01-2021  Express Rail Link West Kowloon     Arrival   \n",
+       "3           3  01-01-2021  Express Rail Link West Kowloon   Departure   \n",
+       "4           4  01-01-2021                        Hung Hom     Arrival   \n",
        "\n",
-       "      passenger_origin  passenger_count  \n",
-       "0  Hong Kong Residents              341  \n",
-       "1  Hong Kong Residents              803  \n",
-       "2  Hong Kong Residents                0  \n",
-       "3  Hong Kong Residents                0  \n",
-       "4  Hong Kong Residents                0  "
+       "      passenger_origin  passenger_count travel_method  \n",
+       "0  Hong Kong Residents              341        by air  \n",
+       "1  Hong Kong Residents              803        by air  \n",
+       "2  Hong Kong Residents                0       by land  \n",
+       "3  Hong Kong Residents                0       by land  \n",
+       "4  Hong Kong Residents                0       by land  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = load_data()\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "b91e1c8b",
    "metadata": {},
    "outputs": [
@@ -175,17 +160,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "id": "3ac40e8d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.006087"
+       "0.00607958"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "id": "8d762f06",
    "metadata": {},
    "outputs": [
@@ -212,15 +197,15 @@
        "3         01-01-2021\n",
        "4         01-01-2021\n",
        "             ...    \n",
-       "137683    25-02-2025\n",
-       "137684    25-02-2025\n",
-       "137685    25-02-2025\n",
-       "137686    25-02-2025\n",
-       "137687    25-02-2025\n",
-       "Name: date, Length: 137688, dtype: object>"
+       "137515    23-02-2025\n",
+       "137516    23-02-2025\n",
+       "137517    23-02-2025\n",
+       "137518    23-02-2025\n",
+       "137519    23-02-2025\n",
+       "Name: date, Length: 137520, dtype: object>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "id": "ff809270",
    "metadata": {},
    "outputs": [
@@ -247,7 +232,7 @@
        "       'Macau Ferry Terminal', 'Tuen Mun Ferry Terminal'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,14 +240,6 @@
    "source": [
     "data['control_point'].unique()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e088d804",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
