--- a/notebook/eda.ipynb
+++ b/notebook/eda.ipynb
@@ -12,43 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "5259b1f8-82e5-46ac-908c-1361bf948d49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_data():\n",
-    "    \"\"\"\n",
-    "    Loads and cleans daily passenger traffic data into a DataFrame.\n",
-    "    Data Source: \n",
-    "    https://data.gov.hk/en-data/dataset/hk-immd-set5-statistics-daily-passenger-traffic\n",
-    "    \"\"\"\n",
-    "    data_source_link = \"https://www.immd.gov.hk/opendata/eng/transport/immigration_clearance/statistics_on_daily_passenger_traffic.csv\"\n",
-    "    df = pd.read_csv(data_source_link)\n",
-    "    df = df.iloc[:, :6]\n",
-    "    df = df.melt(\n",
-    "        id_vars=df.columns[:3],\n",
-    "        var_name=\"passenger_origin\",\n",
-    "        value_name=\"passenger_count\",\n",
-    "    )\n",
-    "    # Rename columns\n",
-    "    df = df.rename(\n",
-    "        columns={\n",
-    "            \"Date\": \"date\",\n",
-    "            \"Control Point\": \"control_point\",\n",
-    "            \"Arrival / Departure\": \"travel_type\",\n",
-    "        }\n",
-    "    )\n",
-    "    \n",
-    "    # Export dataframe as csv\n",
-    "    df.to_csv('../data/raw/data.csv')\n",
-    "    \n",
-    "    return df"
+    "data = pd.read_csv('../data/processed/data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "id": "8b9df7cc-adb8-4aa5-a83c-664c607e3161",
    "metadata": {},
    "outputs": [
@@ -73,160 +47,204 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
        "      <th>date</th>\n",
        "      <th>control_point</th>\n",
        "      <th>travel_type</th>\n",
        "      <th>passenger_origin</th>\n",
        "      <th>passenger_count</th>\n",
+       "      <th>travel_method</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Airport</td>\n",
        "      <td>Arrival</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>341</td>\n",
+       "      <td>by air</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Airport</td>\n",
        "      <td>Departure</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>803</td>\n",
+       "      <td>by air</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Express Rail Link West Kowloon</td>\n",
        "      <td>Arrival</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>0</td>\n",
+       "      <td>by land</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Express Rail Link West Kowloon</td>\n",
        "      <td>Departure</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>0</td>\n",
+       "      <td>by land</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>01-01-2021</td>\n",
        "      <td>Hung Hom</td>\n",
        "      <td>Arrival</td>\n",
        "      <td>Hong Kong Residents</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136423</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Harbour Control</td>\n",
-       "      <td>Departure</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136424</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Kai Tak Cruise Terminal</td>\n",
-       "      <td>Arrival</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136425</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Kai Tak Cruise Terminal</td>\n",
-       "      <td>Departure</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136426</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Macau Ferry Terminal</td>\n",
-       "      <td>Arrival</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>2456</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136427</th>\n",
-       "      <td>10-02-2025</td>\n",
-       "      <td>Macau Ferry Terminal</td>\n",
-       "      <td>Departure</td>\n",
-       "      <td>Other Visitors</td>\n",
-       "      <td>2765</td>\n",
+       "      <td>by land</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>136428 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              date                   control_point travel_type  \\\n",
-       "0       01-01-2021                         Airport     Arrival   \n",
-       "1       01-01-2021                         Airport   Departure   \n",
-       "2       01-01-2021  Express Rail Link West Kowloon     Arrival   \n",
-       "3       01-01-2021  Express Rail Link West Kowloon   Departure   \n",
-       "4       01-01-2021                        Hung Hom     Arrival   \n",
-       "...            ...                             ...         ...   \n",
-       "136423  10-02-2025                 Harbour Control   Departure   \n",
-       "136424  10-02-2025         Kai Tak Cruise Terminal     Arrival   \n",
-       "136425  10-02-2025         Kai Tak Cruise Terminal   Departure   \n",
-       "136426  10-02-2025            Macau Ferry Terminal     Arrival   \n",
-       "136427  10-02-2025            Macau Ferry Terminal   Departure   \n",
+       "   Unnamed: 0        date                   control_point travel_type  \\\n",
+       "0           0  01-01-2021                         Airport     Arrival   \n",
+       "1           1  01-01-2021                         Airport   Departure   \n",
+       "2           2  01-01-2021  Express Rail Link West Kowloon     Arrival   \n",
+       "3           3  01-01-2021  Express Rail Link West Kowloon   Departure   \n",
+       "4           4  01-01-2021                        Hung Hom     Arrival   \n",
        "\n",
-       "           passenger_origin  passenger_count  \n",
-       "0       Hong Kong Residents              341  \n",
-       "1       Hong Kong Residents              803  \n",
-       "2       Hong Kong Residents                0  \n",
-       "3       Hong Kong Residents                0  \n",
-       "4       Hong Kong Residents                0  \n",
-       "...                     ...              ...  \n",
-       "136423       Other Visitors               39  \n",
-       "136424       Other Visitors                0  \n",
-       "136425       Other Visitors                0  \n",
-       "136426       Other Visitors             2456  \n",
-       "136427       Other Visitors             2765  \n",
-       "\n",
-       "[136428 rows x 5 columns]"
+       "      passenger_origin  passenger_count travel_method  \n",
+       "0  Hong Kong Residents              341        by air  \n",
+       "1  Hong Kong Residents              803        by air  \n",
+       "2  Hong Kong Residents                0       by land  \n",
+       "3  Hong Kong Residents                0       by land  \n",
+       "4  Hong Kong Residents                0       by land  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "load_data()"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "b91e1c8b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hong Kong Residents' 'Mainland Visitors' 'Other Visitors']\n"
+     ]
+    }
+   ],
    "source": [
-    "# EDA "
+    "# EDA \n",
+    "\n",
+    "# Get unique dates\n",
+    "origin = data['passenger_origin'].unique()\n",
+    "print(origin)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "3ac40e8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00607958"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_passengers = data[\"passenger_count\"].sum()\n",
+    "tourist_df = data[(data['travel_type'] == 'Arrival') & (data['passenger_origin'] != 'Hong Kong Residents')]\n",
+    "volume_entries = round(len(tourist_df) / 7.54e6, 8)\n",
+    "volume_entries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "8d762f06",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.tail of 0         01-01-2021\n",
+       "1         01-01-2021\n",
+       "2         01-01-2021\n",
+       "3         01-01-2021\n",
+       "4         01-01-2021\n",
+       "             ...    \n",
+       "137515    23-02-2025\n",
+       "137516    23-02-2025\n",
+       "137517    23-02-2025\n",
+       "137518    23-02-2025\n",
+       "137519    23-02-2025\n",
+       "Name: date, Length: 137520, dtype: object>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_dates = data['date']\n",
+    "unique_dates.tail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ff809270",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Airport', 'Express Rail Link West Kowloon', 'Hung Hom', 'Lo Wu',\n",
+       "       'Lok Ma Chau Spur Line', 'Heung Yuen Wai',\n",
+       "       'Hong Kong-Zhuhai-Macao Bridge', 'Lok Ma Chau', 'Man Kam To',\n",
+       "       'Sha Tau Kok', 'Shenzhen Bay', 'China Ferry Terminal',\n",
+       "       'Harbour Control', 'Kai Tak Cruise Terminal',\n",
+       "       'Macau Ferry Terminal', 'Tuen Mun Ferry Terminal'], dtype=object)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['control_point'].unique()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "532",
    "language": "python",
    "name": "python3"
   },
@@ -240,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
